--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 **/node_modules
+**/build
 
 # next.js
 /.next/
@@ -17,10 +18,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files
-.env*
-
-# vercel
-.vercel
+# .env*
 
 # typescript
 *.tsbuildinfo
